try solve real-device-only layout problems

--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -1,14 +1,18 @@
 @use './mixins' as *;
 
-html {
-  height: 100%;
-}
-
+html,
 body {
+  height: 100%;
   height: 100%;
   font-size: 1rem;
   background-color: hsla(0, 0%, 0%);
   overflow-x: hidden;
+}
+
+body {
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
