--- a/app/styles/components/header.module.scss
+++ b/app/styles/components/header.module.scss
@@ -2,6 +2,7 @@
 
 .header {
   height: 100px;
+  flex-shrink: 0;
   @include app-width-wrapper;
   background-color: black;
   padding-right: 1.5rem;
