--- a/app/styles/pages/app.module.scss
+++ b/app/styles/pages/app.module.scss
@@ -2,6 +2,7 @@
 
 .app {
   height: 100%;
+  flex: 1;
   display: grid;
   place-content: center;
   background-image: linear-gradient(hsla(240, 15%, 15%, 0.8)),
@@ -32,7 +33,7 @@
   width: 200px;
   aspect-ratio: 1;
   height: min-content;
-  transform: translateX(15%);
+  // transform: translateX(15%);
 
   & img {
     width: 100%;
